# lib-dice-roller

./: .gitignore  Brewfile  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: android-pipeline.yml  ios-pipeline.yml  pipeline.yml  rust-pipeline.yml  rust.yml  wasm-pipeline.yml
applications/ios/: Gemfile  Makefile
applications/ios/DiceRoller/: AppDelegate.swift  ContentView.swift  DiceRoller-Bridging-Header.h  SceneDelegate.swift
applications/ios/DiceRoller.xcodeproj/: project.pbxproj
applications/ios/DiceRoller/DiceRollRepository/: DefaultDiceRollRepository.swift
applications/ios/DiceRollerTests/: DiceRollerTests.swift
applications/ios/DiceRollerUITests/: DiceRollerUITests.swift
applications/ios/scripts/: generate-protobufs.sh
common/dice-roller/: Cargo.toml  Makefile  build.rs
common/dice-roller-ffi/: .gitignore  Brewfile.lock.json  Cargo.toml  Makefile  build.rs
common/dice-roller-ffi/src/adapters/ffi/: ffi_adapter.rs
common/dice-roller-jni/: Cargo.toml  Makefile  cargo-config.toml
common/dice-roller-jni/src/adapters/: mod.rs
common/dice-roller-jni/src/adapters/jni/: jni_adapter.rs
common/dice-roller-wasm/: Cargo.toml  Makefile
common/dice-roller-wasm/src/adapters/wasm/: wasm_adapter.rs
common/dice-roller-wasm/tests/: wasm_adapter_test.rs
common/dice-roller/protobuf_schemata/: roll_response.proto
common/dice-roller/src/: lib.rs
common/dice-roller/src/roll/: roll_dice.rs  roll_request.rs
common/lib-dice-roller/: .gitignore  Cargo.toml  Makefile  build.rs  cargo-config.toml
common/lib-dice-roller/flatbuffer_schemata/: roll_request.fbs  roll_response.fbs
common/lib-dice-roller/protobuf_schemata/: roll_request.proto
common/lib-dice-roller/scripts/: test.sh
common/lib-dice-roller/src/: lib.rs
common/lib-dice-roller/src/adapters/: mod.rs
common/lib-dice-roller/src/adapters/ffi/: ffi_adapter.rs  mod.rs
common/lib-dice-roller/src/adapters/jni/: jni_adapter.rs  mod.rs
common/lib-dice-roller/src/adapters/wasm/: wasm_adapter.rs
common/lib-dice-roller/src/ffi/: ffi_wrapper.rs
common/lib-dice-roller/src/roll/: roll_dice.rs  roll_request.rs  roll_response.rs
common/lib-dice-roller/src/roll_generated/: mod.rs
common/lib-dice-roller/src/wasm/: mod.rs
common/lib-dice-roller/tests/: wasm_adapter_test.rs
platform-adapters/android/: Brewfile.lock.json  Makefile  settings.gradle
platform-adapters/android/LibDiceRollerAdapter/: .gitignore  build.gradle
platform-adapters/android/app/: build.gradle
platform-adapters/ios/: .gitignore  Brewfile.lock.json  Makefile
platform-adapters/ios/LibDiceRoller/: LibDiceRoller.modulemap
platform-adapters/ios/LibDiceRoller.xcodeproj/: project.pbxproj
platform-adapters/ios/LibDiceRollerTests/: DefaultDiceRollRepositoryTests.swift
platform-adapters/ios/scripts/: generate-protobufs.sh
platform-wrappers/android/app/: build.gradle
platform-wrappers/ios/: Brewfile.lock.json  Makefile
platform-wrappers/ios/LibDiceRoller/: LibDiceRoller.h
platform-wrappers/ios/LibDiceRoller.xcodeproj/: project.pbxproj
platform-wrappers/ios/LibDiceRollerTests/: RollRequestTests.swift  RollResponseTests.swift
platform-wrappers/ios/scripts/: generate-protobufs.sh
src/: lib.rs  roll.rs
src/ffi/: ffi_wrapper.rs  mod.rs
src/roll/: mod.rs  roll_dice.rs  roll_request.rs  roll_response.rs
(+22 files in other folders)
