[package]
name = "dice-roller"
version = "0.1.0"
authors = ["Walter Scarborough <walter.scarborough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dice_roller"
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "0.6.1"
rand = "0.7.3"
libc = "0.2.76"
