[package]
name = "dice_roller_jni"
version = "0.1.0"
authors = ["Walter Scarborough <walter.scarborough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dice_roller_jni"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
dice_roller = { path = "../dice-roller" }
jni = { version = "0.17.0", optional = true }
android_logger = { version = "0.9.0", optional = true }
log = "0.4.11"

[features]
enable-jni = ["jni"]
enable-android-logging = ["android_logger"]
