[package]
name = "dice_roller_wasm"
version = "0.1.0"
authors = ["Walter Scarborough <walter.scarborough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dice_roller_wasm"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
dice_roller = { path = "../dice-roller" }
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
