[package]
name = "dice_roller"
version = "0.1.0"
authors = ["Walter Scarborough <walter.scarborough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dice_roller"
crate-type = ["cdylib", "staticlib"]

[dependencies]
prost = "0.6.1"
rand = "0.7.3"
libc = "0.2.76"

[build-dependencies]
prost-build = "0.6.1"
cargo-lipo = "3.1.0"
cbindgen = "0.14.4"
