[package]
name = "dice_roller"
version = "0.1.0"
authors = ["Walter Scarborough <walter.scarborough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dice_roller"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
prost = "0.6.1"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
libc = "0.2.76"
log = "0.4.11"
jni = { version = "0.17.0", optional = true }
android_logger = { version = "0.9.0", optional = true }
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"

[build-dependencies]
prost-build = "0.6.1"
cargo-lipo = "3.1.0"
cbindgen = "0.14.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
enable-jni = ["jni"]
enable-android-logging = ["android_logger"]
#enable-wasm = ["wasm-bindgen", "js-sys"]
